Projects/Project6/Windows/TypeChecking/MainDriver/COOL.output
Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class class_list

    4 class: CLASS TYPEID '{' optional_feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'

    6 optional_feature_list: /* empty */
    7                      | feature_list

    8 feature_list: feature ';'
    9             | feature ';' feature_list

   10 feature: OBJECTID formals ':' TYPEID '{' expr '}'
   11        | OBJECTID ':' TYPEID optional_initialization

   12 optional_initialization: /* empty */
   13                        | ASSIGN expr

   14 formals: '(' ')'
   15        | '(' formal_list ')'

   16 formal_list: formal
   17            | formal ',' formal_list

   18 formal: OBJECTID ':' TYPEID

   19 let_list: OBJECTID ':' TYPEID optional_initialization IN expr
   20         | OBJECTID ':' TYPEID optional_initialization ',' let_list

   21 expr: OBJECTID ASSIGN expr
   22     | expr '@' TYPEID '.' OBJECTID actuals
   23     | expr '.' OBJECTID actuals
   24     | IF expr THEN expr ELSE expr FI
   25     | WHILE expr LOOP expr POOL
   26     | '{' stmt_list '}'
   27     | LET let_list
   28     | CASE expr OF case_list ESAC
   29     | NEW TYPEID
   30     | ISVOID expr
   31     | expr '+' expr
   32     | expr '-' expr
   33     | expr '*' expr
   34     | expr '/' expr
   35     | '~' expr
   36     | expr '<' expr
   37     | expr '=' expr
   38     | expr LE expr
   39     | NOT expr
   40     | '(' expr ')'
   41     | INT_CONST
   42     | STR_CONST
   43     | BOOL_CONST
   44     | OBJECTID
   45     | OBJECTID actuals

   46 stmt_list: expr ';'
   47          | expr ';' stmt_list

   48 actuals: '(' ')'
   49        | '(' exp_list ')'

   50 exp_list: expr
   51         | expr ',' exp_list

   52 case_list: simple_case
   53          | simple_case case_list

   54 simple_case: OBJECTID ':' TYPEID DARROW expr ';'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 14 15 40 48 49
')' (41) 14 15 40 48 49
'*' (42) 33
'+' (43) 31
',' (44) 17 20 51
'-' (45) 32
'.' (46) 22 23
'/' (47) 34
':' (58) 10 11 18 19 20 54
';' (59) 4 5 8 9 46 47 54
'<' (60) 36
'=' (61) 37
'@' (64) 22
'{' (123) 4 5 10 26
'}' (125) 4 5 10 26
'~' (126) 35
error (256)
STR_CONST (258) 42
TYPEID (259) 4 5 10 11 18 19 20 22 29 54
OBJECTID (260) 10 11 18 19 20 21 22 23 44 45 54
INT_CONST (261) 41
BOOL_CONST (262) 43
CLASS (263) 4 5
ELSE (264) 24
FI (265) 24
IF (266) 24
IN (267) 19
INHERITS (268) 5
LET (269) 27
LOOP (270) 25
POOL (271) 25
THEN (272) 24
WHILE (273) 25
CASE (274) 28
ESAC (275) 28
OF (276) 28
DARROW (277) 54
NEW (278) 29
ISVOID (279) 30
ASSIGN (280) 13 21
NOT (281) 39
LE (282) 38
LET_STMT (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5, on right: 2 3
optional_feature_list (49)
    on left: 6 7, on right: 4 5
feature_list (50)
    on left: 8 9, on right: 7 9
feature (51)
    on left: 10 11, on right: 8 9
optional_initialization (52)
    on left: 12 13, on right: 11 19 20
formals (53)
    on left: 14 15, on right: 10
formal_list (54)
    on left: 16 17, on right: 15 17
formal (55)
    on left: 18, on right: 16 17
let_list (56)
    on left: 19 20, on right: 20 27
expr (57)
    on left: 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38
    39 40 41 42 43 44 45, on right: 10 13 19 21 22 23 24 25 28 30 31
    32 33 34 35 36 37 38 39 40 46 47 50 51 54
stmt_list (58)
    on left: 46 47, on right: 26 47
actuals (59)
    on left: 48 49, on right: 22 23 45
exp_list (60)
    on left: 50 51, on right: 49 51
case_list (61)
    on left: 52 53, on right: 28 53
simple_case (62)
    on left: 54, on right: 52 53


state 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


state 1

    4 class: CLASS . TYPEID '{' optional_feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 5


state 2

    0 $accept: program . $end

    $end  shift, and go to state 6


state 3

    1 program: class_list .

    $default  reduce using rule 1 (program)


state 4

    2 class_list: class .
    3           | class . class_list

    CLASS  shift, and go to state 1

    $default  reduce using rule 2 (class_list)

    class_list  go to state 7
    class       go to state 4


state 5

    4 class: CLASS TYPEID . '{' optional_feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' optional_feature_list '}' ';'

    INHERITS  shift, and go to state 8
    '{'       shift, and go to state 9


state 6

    0 $accept: program $end .

    $default  accept


state 7

    3 class_list: class class_list .

    $default  reduce using rule 3 (class_list)


state 8

    5 class: CLASS TYPEID INHERITS . TYPEID '{' optional_feature_list '}' ';'

    TYPEID  shift, and go to state 10


state 9

    4 class: CLASS TYPEID '{' . optional_feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 6 (optional_feature_list)

    optional_feature_list  go to state 12
    feature_list           go to state 13
    feature                go to state 14


state 10

    5 class: CLASS TYPEID INHERITS TYPEID . '{' optional_feature_list '}' ';'

    '{'  shift, and go to state 15


state 11

   10 feature: OBJECTID . formals ':' TYPEID '{' expr '}'
   11        | OBJECTID . ':' TYPEID optional_initialization

    ':'  shift, and go to state 16
    '('  shift, and go to state 17

    formals  go to state 18


state 12

    4 class: CLASS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 19


state 13

    7 optional_feature_list: feature_list .

    $default  reduce using rule 7 (optional_feature_list)


state 14

    8 feature_list: feature . ';'
    9             | feature . ';' feature_list

    ';'  shift, and go to state 20


state 15

    5 class: CLASS TYPEID INHERITS TYPEID '{' . optional_feature_list '}' ';'

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 6 (optional_feature_list)

    optional_feature_list  go to state 21
    feature_list           go to state 13
    feature                go to state 14


state 16

   11 feature: OBJECTID ':' . TYPEID optional_initialization

    TYPEID  shift, and go to state 22


state 17

   14 formals: '(' . ')'
   15        | '(' . formal_list ')'

    OBJECTID  shift, and go to state 23
    ')'       shift, and go to state 24

    formal_list  go to state 25
    formal       go to state 26


state 18

   10 feature: OBJECTID formals . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 27


state 19

    4 class: CLASS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 28


state 20

    8 feature_list: feature ';' .
    9             | feature ';' . feature_list

    OBJECTID  shift, and go to state 11

    $default  reduce using rule 8 (feature_list)

    feature_list  go to state 29
    feature       go to state 14


state 21

    5 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list . '}' ';'

    '}'  shift, and go to state 30


state 22

   11 feature: OBJECTID ':' TYPEID . optional_initialization

    ASSIGN  shift, and go to state 31

    $default  reduce using rule 12 (optional_initialization)

    optional_initialization  go to state 32


state 23

   18 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 33


state 24

   14 formals: '(' ')' .

    $default  reduce using rule 14 (formals)


state 25

   15 formals: '(' formal_list . ')'

    ')'  shift, and go to state 34


state 26

   16 formal_list: formal .
   17            | formal . ',' formal_list

    ','  shift, and go to state 35

    $default  reduce using rule 16 (formal_list)


state 27

   10 feature: OBJECTID formals ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 36


state 28

    4 class: CLASS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 4 (class)


state 29

    9 feature_list: feature ';' feature_list .

    $default  reduce using rule 9 (feature_list)


state 30

    5 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' . ';'

    ';'  shift, and go to state 37


state 31

   13 optional_initialization: ASSIGN . expr

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 52


state 32

   11 feature: OBJECTID ':' TYPEID optional_initialization .

    $default  reduce using rule 11 (feature)


state 33

   18 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 53


state 34

   15 formals: '(' formal_list ')' .

    $default  reduce using rule 15 (formals)


state 35

   17 formal_list: formal ',' . formal_list

    OBJECTID  shift, and go to state 23

    formal_list  go to state 54
    formal       go to state 26


state 36

   10 feature: OBJECTID formals ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 55


state 37

    5 class: CLASS TYPEID INHERITS TYPEID '{' optional_feature_list '}' ';' .

    $default  reduce using rule 5 (class)


state 38

   42 expr: STR_CONST .

    $default  reduce using rule 42 (expr)


state 39

   21 expr: OBJECTID . ASSIGN expr
   44     | OBJECTID .
   45     | OBJECTID . actuals

    ASSIGN  shift, and go to state 56
    '('     shift, and go to state 57

    $default  reduce using rule 44 (expr)

    actuals  go to state 58


state 40

   41 expr: INT_CONST .

    $default  reduce using rule 41 (expr)


state 41

   43 expr: BOOL_CONST .

    $default  reduce using rule 43 (expr)


state 42

   24 expr: IF . expr THEN expr ELSE expr FI

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 59


state 43

   27 expr: LET . let_list

    OBJECTID  shift, and go to state 60

    let_list  go to state 61


state 44

   25 expr: WHILE . expr LOOP expr POOL

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 62


state 45

   28 expr: CASE . expr OF case_list ESAC

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 63


state 46

   29 expr: NEW . TYPEID

    TYPEID  shift, and go to state 64


state 47

   30 expr: ISVOID . expr

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 65


state 48

   39 expr: NOT . expr

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 66


state 49

   35 expr: '~' . expr

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 67


state 50

   26 expr: '{' . stmt_list '}'

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr       go to state 68
    stmt_list  go to state 69


state 51

   40 expr: '(' . expr ')'

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 70


state 52

   13 optional_initialization: ASSIGN expr .
   22 expr: expr . '@' TYPEID '.' OBJECTID actuals
   23     | expr . '.' OBJECTID actuals
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . '<' expr
   37     | expr . '=' expr
   38     | expr . LE expr

    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '-'  shift, and go to state 74
    '+'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 13 (optional_initialization)


state 53

   18 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 18 (formal)


state 54

   17 formal_list: formal ',' formal_list .

    $default  reduce using rule 17 (formal_list)


state 55

   10 feature: OBJECTID formals ':' TYPEID '{' . expr '}'

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 80


state 56

   21 expr: OBJECTID ASSIGN . expr

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 81


state 57

   48 actuals: '(' . ')'
   49        | '(' . exp_list ')'

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51
    ')'         shift, and go to state 82

    expr      go to state 83
    exp_list  go to state 84


state 58

   45 expr: OBJECTID actuals .

    $default  reduce using rule 45 (expr)


state 59

   22 expr: expr . '@' TYPEID '.' OBJECTID actuals
   23     | expr . '.' OBJECTID actuals
   24     | IF expr . THEN expr ELSE expr FI
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . '<' expr
   37     | expr . '=' expr
   38     | expr . LE expr

    THEN  shift, and go to state 85
    LE    shift, and go to state 71
    '<'   shift, and go to state 72
    '='   shift, and go to state 73
    '-'   shift, and go to state 74
    '+'   shift, and go to state 75
    '*'   shift, and go to state 76
    '/'   shift, and go to state 77
    '@'   shift, and go to state 78
    '.'   shift, and go to state 79


state 60

   19 let_list: OBJECTID . ':' TYPEID optional_initialization IN expr
   20         | OBJECTID . ':' TYPEID optional_initialization ',' let_list

    ':'  shift, and go to state 86


state 61

   27 expr: LET let_list .

    $default  reduce using rule 27 (expr)


state 62

   22 expr: expr . '@' TYPEID '.' OBJECTID actuals
   23     | expr . '.' OBJECTID actuals
   25     | WHILE expr . LOOP expr POOL
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . '<' expr
   37     | expr . '=' expr
   38     | expr . LE expr

    LOOP  shift, and go to state 87
    LE    shift, and go to state 71
    '<'   shift, and go to state 72
    '='   shift, and go to state 73
    '-'   shift, and go to state 74
    '+'   shift, and go to state 75
    '*'   shift, and go to state 76
    '/'   shift, and go to state 77
    '@'   shift, and go to state 78
    '.'   shift, and go to state 79


state 63

   22 expr: expr . '@' TYPEID '.' OBJECTID actuals
   23     | expr . '.' OBJECTID actuals
   28     | CASE expr . OF case_list ESAC
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . '<' expr
   37     | expr . '=' expr
   38     | expr . LE expr

    OF   shift, and go to state 88
    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '-'  shift, and go to state 74
    '+'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79


state 64

   29 expr: NEW TYPEID .

    $default  reduce using rule 29 (expr)


state 65

   22 expr: expr . '@' TYPEID '.' OBJECTID actuals
   23     | expr . '.' OBJECTID actuals
   30     | ISVOID expr .
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . '<' expr
   37     | expr . '=' expr
   38     | expr . LE expr

    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 30 (expr)


state 66

   22 expr: expr . '@' TYPEID '.' OBJECTID actuals
   23     | expr . '.' OBJECTID actuals
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . '<' expr
   37     | expr . '=' expr
   38     | expr . LE expr
   39     | NOT expr .

    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '-'  shift, and go to state 74
    '+'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 39 (expr)


state 67

   22 expr: expr . '@' TYPEID '.' OBJECTID actuals
   23     | expr . '.' OBJECTID actuals
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   35     | '~' expr .
   36     | expr . '<' expr
   37     | expr . '=' expr
   38     | expr . LE expr

    '@'  shift, and go to state 78
    '.'  shift, and go to state 79

    $default  reduce using rule 35 (expr)


state 68

   22 expr: expr . '@' TYPEID '.' OBJECTID actuals
   23     | expr . '.' OBJECTID actuals
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . '<' expr
   37     | expr . '=' expr
   38     | expr . LE expr
   46 stmt_list: expr . ';'
   47          | expr . ';' stmt_list

    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '-'  shift, and go to state 74
    '+'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79
    ';'  shift, and go to state 89


state 69

   26 expr: '{' stmt_list . '}'

    '}'  shift, and go to state 90


state 70

   22 expr: expr . '@' TYPEID '.' OBJECTID actuals
   23     | expr . '.' OBJECTID actuals
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . '<' expr
   37     | expr . '=' expr
   38     | expr . LE expr
   40     | '(' expr . ')'

    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '-'  shift, and go to state 74
    '+'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
    '.'  shift, and go to state 79
    ')'  shift, and go to state 91


state 71

   38 expr: expr LE . expr

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 92


state 72

   36 expr: expr '<' . expr

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 93


state 73

   37 expr: expr '=' . expr

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 94


state 74

   32 expr: expr '-' . expr

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 95


state 75

   31 expr: expr '+' . expr

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 96


state 76

   33 expr: expr '*' . expr

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 97


state 77

   34 expr: expr '/' . expr

    STR_CONST   shift, and go to state 38
    OBJECTID    shift, and go to state 39
    INT_CONST   shift, and go to state 40
    BOOL_CONST  shift, and go to state 41
    IF          shift, and go to state 42
    LET         shift, and go to state 43
    WHILE       shift, and go to state 44
    CASE        shift, and go to state 45
    NEW         shift, and go to state 46
    ISVOID      shift, and go to state 47
    NOT         shift, and go to state 48
    '~'         shift, and go to state 49
    '{'         shift, and go to state 50
    '('         shift, and go to state 51

    expr  go to state 98


state 78

   22 expr: expr '@' . TYPEID '.' OBJECTID actuals

    TYPEID  shift, and go to state 99


state 79

   23 expr: expr '.' . OBJECTID actuals

    OBJECTID  shift, and go to state 100


state 80

   10 feature: OBJECTID formals ':' TYPEID '{' expr . '}'
   22 expr: expr . '@' TYPEID '.' OBJECTID actuals
   23     | expr . '.' OBJECTID actuals
   31     | expr . '+' expr
   32     | expr . '-' expr
   33     | expr . '*' expr
   34     | expr . '/' expr
   36     | expr . '<' expr
   37     | expr . '=' expr
   38     | expr . LE expr

    LE   shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    '-'  shift, and go to state 74
    '+'  shift, and go to state 75
    '*'  shift, and go to state 76
    '/'  shift, and go to state 77
    '@'  shift, and go to state 78
